--- a/z-fuel-backend/package.json
+++ b/z-fuel-backend/package.json
@@ -12,8 +12,10 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
   }
 }
