--- a/z-fuel-frontend/package.json
+++ b/z-fuel-frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@vis.gl/react-google-maps": "^1.4.2",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
