--- a/z-fuel-frontend/package.json
+++ b/z-fuel-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@builder.io/react": "^8.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -22,6 +23,7 @@
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "@builder.io/dev-tools": "^1.3.3",
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
