--- a/z-fuel-backend/package.json
+++ b/z-fuel-backend/package.json
@@ -9,10 +9,11 @@
     "seed": "node src/scripts/seedData.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "mongoose": "^7.6.3",
-    "body-parser": "^1.20.2"
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
